<resources>
    <string name="app_name">Serious Gains</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Incorrect username</string>
    <string name="error_invalid_password">This password is wrong.</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required.</string>
    <string name="permission_contacts">Contacts permissions are needed for providing email
        completions.</string>
    <string name="attempt_toast">Attempting Login&#8230;</string>
    <string name="successful_login">Success!</string>
    <string name="username">jdoe</string>
    <string name="password">welcome1</string>

    <string name="menu_navigation">Navigation</string>

    <string name="client_list_heading">Client List</string>

    <string name="menu_settings">Settings</string>

    <string name="new_client">New Client</string>

    <string name="log_out">Log Out</string>
    <string name="log_out_toast">Logging out&#8230;</string>

    <string name="search">Search</string>

    <string name="prompt_name">First Name</string>
    <string name="prompt_surname">Last Name</string>
    <string name="prompt_pronouns">Pronouns</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_credit_card_num">Credit Card Number</string>
    <string name="prompt_credit_card_type">Type</string>
    <string name="prompt_cvc">CVC</string>
    <string name="prompt_cc_expiration">Expiration</string>
    <string name="prompt_height">Height</string>
    <string name="prompt_weight">Weight</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_zipcode">Zip Code</string>
    <string name="prompt_goals">Fitness Goals \n</string>



    <string-array name="pronouns">
    <item>She/Her</item>
    <item>He/Him</item>
    <item>They/Them</item>
    <item>Xe/Xer</item>
</string-array>

<string-array name="cardtypes">
    <item>American Express</item>
    <item>Discover</item>
    <item>Master Card</item>
    <item>Visa</item>
</string-array>


    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
