<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <EditText
        android:id="@+id/first_name_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:padding="10dp"
        android:hint="@string/prompt_name"/>

    <EditText
        android:id="@+id/surname_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:padding="10dp"
        android:hint="@string/prompt_surname"/>

    <ImageButton
        android:id="@+id/client_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_column="2"
        android:layout_row="0"
        android:padding="10dp"
        android:layout_rowSpan="4"
        android:layout_columnSpan="4"
        android:src="@drawable/ic_menu_camera"
        />

    <Spinner
        android:id="@+id/pronouns_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:padding="10dp"
        android:entries="@array/pronouns"
        android:prompt="@string/prompt_pronouns"/>

    <EditText
        android:id="@+id/weight_tb"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:hint="@string/prompt_weight"
        />

    <EditText
        android:id="@+id/height_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:hint="@string/prompt_height"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/street_add_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="3"
        android:hint="@string/prompt_address"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/city_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:hint="@string/prompt_city"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/state_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:hint="@string/prompt_state"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/zipcode_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_row="4"
        android:hint="@string/prompt_zipcode"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/goals_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_rowSpan="2"
        android:layout_row="5"
        android:padding="10dp"
        android:hint="@string/prompt_goals"
        />

    <EditText
        android:id="@+id/creditcardnum_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:layout_columnSpan="4"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/prompt_credit_card_num"
        />

    <Spinner android:id="@+id/creditcardtype_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="8"
             android:layout_columnSpan="2"
             android:padding="10dp"
             android:entries="@array/cardtypes"
             android:prompt="@string/prompt_credit_card_type"
    />

    <EditText
        android:id="@+id/cvc_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="8"
        android:hint="@string/prompt_cvc"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        android:layout_columnSpan="4"
        android:textSize="30dp"
        android:text="Placeholder for calendar/sessions viewer?"
        android:padding="10dp"/>

</GridLayout>